# ChangeLog for dev-java/apple-java-extensions-bin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/apple-java-extensions-bin/ChangeLog,v 1.11 2007/11/21 20:56:13 betelgeuse Exp $

  21 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
  apple-java-extensions-bin-1.2-r1.ebuild:
  HOMEPAGE fix. Reported by pipping in #gentoo-java.

  04 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  -apple-java-extensions-bin-1.2.ebuild:
  Remove gen-1 version.

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  apple-java-extensions-bin-1.2-r1.ebuild:
  stable x86, bug 179941

  13 Sep 2006; Joshua Nichols <nichoj@gentoo.org> metadata.xml,
  apple-java-extensions-bin-1.2.ebuild,
  apple-java-extensions-bin-1.2-r1.ebuild:
  Cleaned up description, moved long version to metadta.xml

*apple-java-extensions-bin-1.2-r1 (03 Aug 2006)

  03 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +apple-java-extensions-bin-1.2-r1.ebuild:
  Migrated to generation 2 Java build system.

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org>
  apple-java-extensions-bin-1.2.ebuild:
  depend on app-arch/unzip

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  apple-java-extensions-bin-1.2.ebuild:
  Keywords ~amd64.

  30 Aug 2004; Chris Aniszczyk <zx@gentoo.org>
  apple-java-extensions-bin-1.2.ebuild:
  Marking x86

  03 Aug 2004; David Holm <dholm@gentoo.org>
  apple-java-extensions-bin-1.2.ebuild:
  Added to ~ppc.

*apple-java-extensions-bin-1.2 (30 Jul 2004)

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org>
  +apple-java-extensions-bin-1.2.ebuild:
  initial import, dependency of gallery-remote
