@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/apple-java-extensions-bin
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/apple-java-extensions-bin/ChangeLog,v 1.11 2007/11/21 20:56:13 betelgeuse Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/apple-java-extensions-bin/ChangeLog,v 1.12 2010/03/28 03:56:46 ali_bush Exp $
+
+*apple-java-extensions-bin-1.3 (28 Mar 2010)
+
+  28 Mar 2010; Alistair Bush <ali_bush@gentoo.org>
+  apple-java-extensions-bin-1.2-r1.ebuild,
+  +apple-java-extensions-bin-1.3.ebuild:
+  Version Bump and fix Description..
 
   21 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
   apple-java-extensions-bin-1.2-r1.ebuild:
